--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Porfolio</title>
+
+        <!-- My Style -->
+        <link rel="stylesheet" href="assets/css/main.css">
+
+        <!-- CDN -->
+        <script src="https://cdn.tailwindcss.com"></script>
+
+        <!-- Tailwind Style -->
+        <style type="text/tailwindcss">
+            @layer base {
+              h1 {
+                @apply text-[40px] sm:text-[56px] font-extrabold;
+              }
+            }
+          </style>
     </head>
 
     <body>
         <h1>Hello World</h1>
+
+        <!-- My JS -->
+        <script src="assets/js/script.js"></script>
     </body>
 
 </html>
